Vienna ChangeLog File
=====================

As you release new builds, update this file with details of the changes in each build. The
most recent build should be at the top of this file.

Thanks!

2.0.0.2018
----------
- Fix Growl integration to work in localised builds.
- Fix handling of folder icons from sites like FeedBurner.
- Finalised help file for 2.0 release.

2.0.0.2017
----------
- Fix localisation article scroll bar truncation.
- Clear download list should not remove items being downloaded.
- Fix handling of Javascript web pages.
- Add three more built-in styles: Tyger, Vienna Pride, EasySimple and Felix.
- Added Demo RSS feeds for new databases.
- Fix parsing of atom xml:base links.
- Added "current selection" Applescript method to return the current text selection.
- Don't undo when doing "Mark All Subscriptions as Read".

2.0.0.2016
----------
- Added Traditional Chinese localisation. (Thanks to Weizhong Yang).
- Accept HTTP 200 responses with no data as meaning 0 new articles rather than an error.
- Show count of unread on title bar. (Patch submitted by Jussi Hagman).
- Minor bug fixes.

2.0.0.2015
----------
- Improvements to universal date parsing to fix some mis-parsed article dates.
- Fixed OPML format in exported subscriptions to conform to the standard.
- A warning icon now appears next to the folder name in the folders list if an error
  occurred when the feed was last refreshed.

2.0.0.2014
----------
- Fix "Folder NOT xxx" implementation which wasn't working right for group folders.
- Cmd+W closes the Download, Preference or Activity windows even when they are active.
- $FeedDescription$ added as a tag for styles. This expands to the feed description if available.
- Fixed bug where AppleScript 'current article' on an article in a group returns a null reference.
- Search field now also searches in titles.
- Confirmation prompt added before emptying the trash folder.
- Download window now allows double-click to open a downloaded file.